--- a/index.html
+++ b/index.html
@@ -110,5 +110,6 @@
         </main>
         <footer id="end" class="foot"></footer>
         <script src="./script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     </body>
 </html>
