--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
                 </ul>
             </nav>
         </div>
-        <header class="wrapper">
+        <header class="mainWrapper">
             <button id="btnLeft" class="arrow btnl">
                 <i class="fa-solid fa-chevron-left"></i>
             </button>
             <section class="container">
-                <div class="images">
+                <div class="slides">
                     <div class="a box">
-                        <h1>Example headline.</h1>
+                        <h2>Example headline.</h2>
                         <p>Some representative placeholder content for the first slide of the carousel.</p>
                         <button class="linkBtns button">Sign up today</button>
                     </div>
                     <div class="b box">
-                        <h1>Another example headline.</h1>
+                        <h2>Another example headline.</h2>
                         <p>Some representative placeholder content for the second slide of the carousel.</p>
                         <button class="linkBtns button">Learn more</button>
                     </div>
                     <div class="c box">
-                        <h1>One more for good measure.</h1>
+                        <h2>One more for good measure.</h2>
                         <p>Some representative placeholder content for the third slide of this carousel.</p>
                         <button class="linkBtns button">Browse gallery</button>
                     </div>
@@ -79,7 +79,7 @@
                         <div class="insquare">500x500</div>
                     </div>
                     <div class="writing area1">
-                        <h1>First featurette heading. It'll blow your mind.</h1>
+                        <h2>First featurette heading. It'll blow your mind.</h2>
                     <p>Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
                     </div>
                     
@@ -89,7 +89,7 @@
                         <div class="insquare">500x500</div>
                     </div>  
                     <div class="writing area2">
-                        <h1>Oh yeah, it's that good. See for yourself.</h1>
+                        <h2>Oh yeah, it's that good. See for yourself.</h2>
                         <p>Another featurette? Of course. More placeholder content here to give you an idea 
                         of how this layout would work with some actual real-world content in place.</p>
                     </div>
@@ -100,7 +100,7 @@
                         <div class="insquare">500x500</div>
                     </div>
                     <div class="writing area1">
-                        <h1>And lastly, this one. Checkmate.</h1>
+                        <h2>And lastly, this one. Checkmate.</h2>
                         <p>And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better 
                             view of what this would look like with some actual content. Your content.</p>
                     </div>
